@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19940812
+MANIFEST for ded, version t19940815
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
